// Custom Keyboard Builder - final concise ERD
// FINAL DESIGN: 21 tables / 30 foreign keys.
//
// The QC layer intentionally keeps only the two compact physical tables shown
// in the project diagram. Session timestamps, summary views, duplicated context,
// detailed fault diagnostics, and derived aggregate columns are omitted.

Enum UserRole {
  Buyer
  Seller
  Admin
}

Enum SellerApplicationStatus {
  Pending
  Approved
  Rejected
}

Enum BuildStatus {
  Draft
  Saved
  Requested
  Archived
}

Enum RequestStatus {
  Pending
  Accepted
  In_progress
  Completed
  Cancelled
}

Enum NoiseRequirement {
  Normal
  Quiet
  Silent
}

Enum SwitchTechnology {
  Mechanical
  HE
  Topre
  Optical
}

Enum DeviceType {
  QC_STATION
  KEY_SIGNAL_TESTER
  LATENCY_TESTER
  NOISE_SENSOR
}

Enum TestSessionStatus {
  Running
  Passed
  Warning
  Failed
}

Enum KeyTestResult {
  Pass
  Warning
  Fail
}

Table roles {
  id int [pk, increment]
  role_name UserRole [unique, not null]
  permissions varchar
}

Table users {
  id int [pk, increment]
  role_id int [not null, ref: > roles.id]
  username varchar(100) [unique, not null]
  email varchar(255) [unique, not null]
  phone varchar(30) [unique, not null]
  password_hash varchar(255) [not null]
  is_active boolean [not null]
}

Table seller_profiles {
  id int [pk, increment]
  user_id int [not null, unique, ref: - users.id]
  shop_name varchar(255) [not null]
  phone varchar(30) [not null]
  address varchar(500) [not null]
  is_verified boolean [not null]
  verified_at datetime
}

Table seller_applications {
  id int [pk, increment]
  buyer_user_id int [not null, ref: > users.id]
  shop_name varchar(255) [not null]
  phone varchar(30) [not null]
  address varchar(500) [not null]
  note varchar(500)
  status SellerApplicationStatus [not null]
  review_note varchar(500)
  created_at datetime [not null]
  reviewed_at datetime
  reviewed_by int [ref: > users.id]

  Note: 'Buyer requests an upgrade to Seller. Admin approves (sets users.role to Seller and creates seller_profiles) or rejects. At most one Pending application per buyer.'
}

Table brands {
  id int [pk, increment]
  brand_name varchar(255) [unique, not null]
  country varchar(100)
}

Table layouts {
  id varchar(50) [pk]
  layout_name varchar(100) [not null]
  form_factor varchar(100) [not null]
  key_count int [not null]
}

Table keyboard_kits {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  layout_id varchar(50) [not null, ref: > layouts.id]
  kit_name varchar(255) [not null]
  pcb_technology SwitchTechnology [not null]
  switch_mount varchar(100) [not null]
  required_switch_quantity int [not null]
  included_parts varchar(500)
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table switches {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  switch_name varchar(255) [not null]
  switch_technology SwitchTechnology [not null]
  mount_type varchar(100) [not null]
  switch_type varchar(100)
  actuation_force_g int
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table keycap_sets {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  keycap_name varchar(255) [not null]
  supported_form_factor varchar(255) [not null]
  profile varchar(100)
  material varchar(100)
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table stabilizers {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  stab_name varchar(255) [not null]
  supported_layouts varchar(255) [not null]
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table accessories {
  id varchar(50) [pk]
  accessory_type varchar(100) [not null]
  accessory_name varchar(255) [not null]
  target_component varchar(100)
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table builds {
  id varchar(50) [pk]
  buyer_id int [not null, ref: > users.id]
  kit_id varchar(50) [not null, ref: > keyboard_kits.id]
  name nvarchar(255) [not null]
  notes nvarchar(500)
  noise_requirement NoiseRequirement [not null]
  status BuildStatus [not null]
  total_cost_snapshot decimal(10,2) [not null]
  created_at datetime [not null]
  updated_at datetime
}

Table build_items {
  id int [pk, increment]
  build_id varchar(50) [not null, ref: > builds.id]
  switch_id varchar(50) [ref: > switches.id]
  keycap_id varchar(50) [ref: > keycap_sets.id]
  stab_id varchar(50) [ref: > stabilizers.id]
  accessory_id varchar(50) [ref: > accessories.id]
  quantity int [not null]
  unit_price_snapshot decimal(10,2) [not null]
  notes nvarchar(500)

  Note: 'Exactly one product FK must be set. Kit is stored on builds.kit_id.'
}

Table build_mods {
  id int [pk, increment]
  build_id varchar(50) [not null, ref: > builds.id]
  mod_type nvarchar(100) [not null]
  target_component nvarchar(100) [not null]
  notes nvarchar(500)
}

Table build_requests {
  id varchar(50) [pk]
  build_id varchar(50) [not null, ref: > builds.id]
  seller_user_id int [not null, ref: > users.id]
  request_payload_json text [not null]
  status RequestStatus [not null]
  note nvarchar(500)
  requested_at datetime [not null]
  accepted_at datetime
  completed_at datetime
  updated_at datetime

  Note: 'At most one Pending/Accepted/In_progress request per build; enforced by a filtered unique SQL index.'
}

Table devices {
  id varchar(50) [pk]
  seller_user_id int [not null, ref: > users.id]
  device_name nvarchar(100) [not null]
  device_type DeviceType [not null]
  is_active boolean [not null]
  last_seen_at datetime
  created_at datetime [not null]

  Note: 'Seller-owned QC device or station. At most one active QC_STATION per seller; enforced by a filtered unique SQL index.'
}

Table device_test_sessions {
  id varchar(50) [pk]
  request_id varchar(50) [not null, ref: > build_requests.id]
  device_id varchar(50) [not null, ref: > devices.id]
  switch_technology SwitchTechnology [not null]
  noise_requirement NoiseRequirement [not null]
  total_keys int [not null]
  status TestSessionStatus [not null]

  Note: 'Compact QC session. Seller context is resolved through request_id and device_id. At most one Running session per request.'
}

Table device_key_test_results {
  id bigint [pk, increment]
  session_id varchar(50) [not null, ref: > device_test_sessions.id]
  key_code varchar(30) [not null]
  received_key varchar(30)
  press_signal_detected boolean [not null]
  latency decimal(8,2)
  press_count int [not null]
  release_signal boolean [not null]
  hold_duration int
  noise decimal(8,2)
  result KeyTestResult [not null]
  recorded_at datetime [not null]

  indexes {
    (session_id, key_code) [unique, name: 'UX_dktr_session_key_code']
  }

  Note: 'Compact per-key telemetry and final QC verdict. Request, device, and switch technology are resolved through session_id.'
}

Table audit_log {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  table_name varchar(100) [not null]
  record_id varchar(100) [not null]
  action varchar(100) [not null]
  old_value_json text
  new_value_json text
  changed_at datetime [not null]
}

Table chat_conversations {
  id varchar(50) [pk]
  seller_user_id int [not null, ref: > users.id]
  buyer_id int [ref: > users.id]
  admin_user_id int [ref: > users.id]
  build_request_id varchar(50) [ref: > build_requests.id]
  created_at datetime [not null]
  updated_at datetime

  Note: 'Exactly one of buyer_id or admin_user_id must be set. Buyer-admin direct chat is not allowed.'
}

Table chat_messages {
  id varchar(50) [pk]
  conversation_id varchar(50) [not null, ref: > chat_conversations.id]
  sender_user_id int [not null, ref: > users.id]
  message_text text [not null]
  sent_at datetime [not null]
}
